testdata/baselines/reference/submodule/conformance/commonJSImportClassTypeReference.errors.txt
main.js(1,9): error TS2451: Cannot redeclare block-scoped variable 'K'.
main.js(1,15): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
main.js(2,13): error TS2749: 'K' refers to a value, but is being used as a type here. Did you mean 'typeof K'?
mod1.js(1,7): error TS2451: Cannot redeclare block-scoped variable 'K'.
mod1.js(6,1): error TS2304: Cannot find name 'exports'.


==== main.js (3 errors) ====
    const { K } = require("./mod1");
            ~
!!! error TS2451: Cannot redeclare block-scoped variable 'K'.
!!! related TS6203 mod1.js:1:7: 'K' was also declared here.
                  ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    /** @param {K} k */
                ~
!!! error TS2749: 'K' refers to a value, but is being used as a type here. Did you mean 'typeof K'?
    function f(k) {
        k.values()
    }
    
==== mod1.js (2 errors) ====
    class K {
          ~
!!! error TS2451: Cannot redeclare block-scoped variable 'K'.
!!! related TS6203 main.js:1:9: 'K' was also declared here.
        values() {
            return new K()
        }
    }
    exports.K = K;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    